cdk.out/cdk-stack.template.json
{
  "Resources": {
    "youtubeVPCA239B1BD": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-stack/youtubeVPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/Resource"
      }
    },
    "youtubeVPCPublicSubnet1SubnetBBAD7A71": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "youtubeVPCA239B1BD"
        },
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-stack/youtubeVPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PublicSubnet1/Subnet"
      }
    },
    "youtubeVPCPublicSubnet1RouteTableC8D17B8C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "youtubeVPCA239B1BD"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-stack/youtubeVPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PublicSubnet1/RouteTable"
      }
    },
    "youtubeVPCPublicSubnet1RouteTableAssociationD065F8E9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "youtubeVPCPublicSubnet1RouteTableC8D17B8C"
        },
        "SubnetId": {
          "Ref": "youtubeVPCPublicSubnet1SubnetBBAD7A71"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PublicSubnet1/RouteTableAssociation"
      }
    },
    "youtubeVPCPublicSubnet1DefaultRouteB1E44C48": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "youtubeVPCPublicSubnet1RouteTableC8D17B8C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "youtubeVPCIGWD375262D"
        }
      },
      "DependsOn": [
        "youtubeVPCVPCGWD6FB05E7"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PublicSubnet1/DefaultRoute"
      }
    },
    "youtubeVPCPublicSubnet1EIPFF3D64E1": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-stack/youtubeVPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PublicSubnet1/EIP"
      }
    },
    "youtubeVPCPublicSubnet1NATGatewayED807FD2": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "youtubeVPCPublicSubnet1SubnetBBAD7A71"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "youtubeVPCPublicSubnet1EIPFF3D64E1",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-stack/youtubeVPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PublicSubnet1/NATGateway"
      }
    },
    "youtubeVPCPublicSubnet2Subnet6A7AE5ED": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "youtubeVPCA239B1BD"
        },
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-stack/youtubeVPC/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PublicSubnet2/Subnet"
      }
    },
    "youtubeVPCPublicSubnet2RouteTable8BD8339A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "youtubeVPCA239B1BD"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-stack/youtubeVPC/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PublicSubnet2/RouteTable"
      }
    },
    "youtubeVPCPublicSubnet2RouteTableAssociation463D46C7": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "youtubeVPCPublicSubnet2RouteTable8BD8339A"
        },
        "SubnetId": {
          "Ref": "youtubeVPCPublicSubnet2Subnet6A7AE5ED"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PublicSubnet2/RouteTableAssociation"
      }
    },
    "youtubeVPCPublicSubnet2DefaultRouteF2C5C85D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "youtubeVPCPublicSubnet2RouteTable8BD8339A"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "youtubeVPCIGWD375262D"
        }
      },
      "DependsOn": [
        "youtubeVPCVPCGWD6FB05E7"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PublicSubnet2/DefaultRoute"
      }
    },
    "youtubeVPCPrivateSubnet1Subnet942896B4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "youtubeVPCA239B1BD"
        },
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "cdk-stack/youtubeVPC/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PrivateSubnet1/Subnet"
      }
    },
    "youtubeVPCPrivateSubnet1RouteTableBD0A0662": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "youtubeVPCA239B1BD"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-stack/youtubeVPC/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PrivateSubnet1/RouteTable"
      }
    },
    "youtubeVPCPrivateSubnet1RouteTableAssociationC8B7B81B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "youtubeVPCPrivateSubnet1RouteTableBD0A0662"
        },
        "SubnetId": {
          "Ref": "youtubeVPCPrivateSubnet1Subnet942896B4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "youtubeVPCPrivateSubnet1DefaultRouteA47B93A8": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "youtubeVPCPrivateSubnet1RouteTableBD0A0662"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "youtubeVPCPublicSubnet1NATGatewayED807FD2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PrivateSubnet1/DefaultRoute"
      }
    },
    "youtubeVPCPrivateSubnet2SubnetDF206FEE": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "youtubeVPCA239B1BD"
        },
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "cdk-stack/youtubeVPC/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PrivateSubnet2/Subnet"
      }
    },
    "youtubeVPCPrivateSubnet2RouteTable33947164": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "youtubeVPCA239B1BD"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-stack/youtubeVPC/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PrivateSubnet2/RouteTable"
      }
    },
    "youtubeVPCPrivateSubnet2RouteTableAssociation0413D3D0": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "youtubeVPCPrivateSubnet2RouteTable33947164"
        },
        "SubnetId": {
          "Ref": "youtubeVPCPrivateSubnet2SubnetDF206FEE"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "youtubeVPCPrivateSubnet2DefaultRoute0A24C782": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "youtubeVPCPrivateSubnet2RouteTable33947164"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "youtubeVPCPublicSubnet1NATGatewayED807FD2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/PrivateSubnet2/DefaultRoute"
      }
    },
    "youtubeVPCIGWD375262D": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-stack/youtubeVPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/IGW"
      }
    },
    "youtubeVPCVPCGWD6FB05E7": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "youtubeVPCA239B1BD"
        },
        "InternetGatewayId": {
          "Ref": "youtubeVPCIGWD375262D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeVPC/VPCGW"
      }
    },
    "youtubeCluster06FF0684": {
      "Type": "AWS::ECS::Cluster",
      "Metadata": {
        "aws:cdk:path": "cdk-stack/youtubeCluster/Resource"
      }
    },
    "backendServiceLBBBFF014A": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false"
          }
        ],
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "backendServiceLBSecurityGroupF099B8E4",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          {
            "Ref": "youtubeVPCPublicSubnet1SubnetBBAD7A71"
          },
          {
            "Ref": "youtubeVPCPublicSubnet2Subnet6A7AE5ED"
          }
        ],
        "Type": "application"
      },
      "DependsOn": [
        "youtubeVPCPublicSubnet1DefaultRouteB1E44C48",
        "youtubeVPCPublicSubnet2DefaultRouteF2C5C85D"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/LB/Resource"
      }
    },
    "backendServiceLBSecurityGroupF099B8E4": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB cdkstackbackendServiceLB5F3D27EF",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Ref": "youtubeVPCA239B1BD"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/LB/SecurityGroup/Resource"
      }
    },
    "backendServiceLBSecurityGrouptocdkstackbackendServiceSecurityGroup50637DF19005C02A67AF": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "backendServiceLBSecurityGroupF099B8E4",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "backendServiceSecurityGroup76C82F37",
            "GroupId"
          ]
        },
        "FromPort": 9005,
        "ToPort": 9005
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/LB/SecurityGroup/to cdkstackbackendServiceSecurityGroup50637DF1:9005"
      }
    },
    "backendServiceLBPublicListener1CF813B9": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "backendServiceLBPublicListenerECSGroupB242A3B9"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "backendServiceLBBBFF014A"
        },
        "Port": 80,
        "Protocol": "HTTP"
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/LB/PublicListener/Resource"
      }
    },
    "backendServiceLBPublicListenerECSGroupB242A3B9": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "HealthCheckPath": "/",
        "Port": 80,
        "Protocol": "HTTP",
        "TargetGroupAttributes": [
          {
            "Key": "stickiness.enabled",
            "Value": "false"
          }
        ],
        "TargetType": "ip",
        "VpcId": {
          "Ref": "youtubeVPCA239B1BD"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/LB/PublicListener/ECSGroup/Resource"
      }
    },
    "backendServiceTaskDefTaskRoleDA417223": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/TaskDef/TaskRole/Resource"
      }
    },
    "backendServiceTaskDef7172E970": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Environment": [
              {
                "Name": "myVar",
                "Value": "variable01"
              }
            ],
            "Essential": true,
            "Image": {
              "Fn::Join": [
                "",
                [
                  "885300287765.dkr.ecr.us-east-1.",
                  {
                    "Ref": "AWS::URLSuffix"
                  },
                  "/aws-cdk/assets:aeb74dae87eefc4a1d095b666faa6616b16b1b6734841a72d19395cedf6877b0"
                ]
              ]
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "backendServiceTaskDeftestLogGroup2ABE741E"
                },
                "awslogs-stream-prefix": "backendService",
                "awslogs-region": "us-east-1"
              }
            },
            "Name": "test",
            "PortMappings": [
              {
                "ContainerPort": 9005,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "512",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "backendServiceTaskDefExecutionRoleE539272F",
            "Arn"
          ]
        },
        "Family": "cdkstackbackendServiceTaskDefDD878B6D",
        "Memory": "1024",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "backendServiceTaskDefTaskRoleDA417223",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/TaskDef/Resource"
      }
    },
    "backendServiceTaskDeftestLogGroup2ABE741E": {
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/TaskDef/test/LogGroup/Resource"
      }
    },
    "backendServiceTaskDefExecutionRoleE539272F": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/TaskDef/ExecutionRole/Resource"
      }
    },
    "backendServiceTaskDefExecutionRoleDefaultPolicyDF8B3E80": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ecr:us-east-1:885300287765:repository/aws-cdk/assets"
                  ]
                ]
              }
            },
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "backendServiceTaskDeftestLogGroup2ABE741E",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "backendServiceTaskDefExecutionRoleDefaultPolicyDF8B3E80",
        "Roles": [
          {
            "Ref": "backendServiceTaskDefExecutionRoleE539272F"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
      }
    },
    "backendService138D1988": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "youtubeCluster06FF0684"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 2,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "test",
            "ContainerPort": 9005,
            "TargetGroupArn": {
              "Ref": "backendServiceLBPublicListenerECSGroupB242A3B9"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "backendServiceSecurityGroup76C82F37",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "youtubeVPCPrivateSubnet1Subnet942896B4"
              },
              {
                "Ref": "youtubeVPCPrivateSubnet2SubnetDF206FEE"
              }
            ]
          }
        },
        "TaskDefinition": {
          "Ref": "backendServiceTaskDef7172E970"
        }
      },
      "DependsOn": [
        "backendServiceLBPublicListenerECSGroupB242A3B9",
        "backendServiceLBPublicListener1CF813B9"
      ],
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/Service/Service"
      }
    },
    "backendServiceSecurityGroup76C82F37": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "cdk-stack/backendService/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "youtubeVPCA239B1BD"
        }
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/Service/SecurityGroup/Resource"
      }
    },
    "backendServiceSecurityGroupfromcdkstackbackendServiceLBSecurityGroup1CEF4EBF90053655C890": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 9005,
        "GroupId": {
          "Fn::GetAtt": [
            "backendServiceSecurityGroup76C82F37",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "backendServiceLBSecurityGroupF099B8E4",
            "GroupId"
          ]
        },
        "ToPort": 9005
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/backendService/Service/SecurityGroup/from cdkstackbackendServiceLBSecurityGroup1CEF4EBF:9005"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/31SwW7bMAz9lt4VdSmGYcelaVcEKDbDKXpnFNZj44iGSKUIDP/7JDlusm7YiU+Pj6Ieqbmdf/5qP119gzeZue3uuncc0PZrBbczNQrH4NAsX/zPqF1UsxBBTdmGfGOW7EVDdJoFk3gw+a4e3Y3tnzuXU8/V0lRx05Jbx43HIj+jmqPiE2xaPPNnLjVkR6DE/l2cwf2qyuEH6AMovsHRVIEOCZ4vXnnFkPAkGF9yOi00Wfy1R69mjS4G0uND4NiVN/yXuG8CivxFr3zhB4NObL9so6TuWTXB7xAayK5kd4cv5Gny9JFhr0AewwV3ql1jONC4jxMs7WYdaLYqdtF1acplWo8M21towTvcfijHFkTJtUmxKYq0zENa17+ri4k/zpc6St78STPhi/xT6pw2MA3y4jgYgr3tax73XmLFqa4sakTZXZhB/nNi79jtMKz20GD5h [...]
      },
      "Metadata": {
        "aws:cdk:path": "cdk-stack/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "backendServiceLoadBalancerDNSF9558DFA": {
      "Value": {
        "Fn::GetAtt": [
          "backendServiceLBBBFF014A",
          "DNSName"
        ]
      }
    },
    "backendServiceServiceURL9B42ABBA": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "backendServiceLBBBFF014A",
                "DNSName"
              ]
            }
          ]
        ]
      }
    },
    "loadBalancerUrl": {
      "Value": {
        "Fn::GetAtt": [
          "backendServiceLBBBFF014A",
          "DNSName"
        ]
      },
      "Export": {
        "Name": "loadBalancerUrl"
      }
    }
  }
}
